--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config jest.config.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^24.9.0",
+    "@types/node": "^13.1.8",
     "express": "^4.17.1",
     "typescript": "^3.7.5"
   },
   "devDependencies": {
-    "jest": "^24.9.0"
+    "@types/faker": "^4.1.9",
+    "faker": "^4.1.0",
+    "jest": "^24.9.0",
+    "ts-jest": "^24.3.0"
   }
 }
