--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@types/jest": "^24.9.0",
     "@types/node": "^13.1.8",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "typescript": "^3.7.5"
   },
   "devDependencies": {
     "@types/faker": "^4.1.9",
+    "@types/jsonwebtoken": "^8.3.6",
+    "@types/lodash": "^4.14.149",
     "faker": "^4.1.0",
     "jest": "^24.9.0",
     "ts-jest": "^24.3.0"
