--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/jest": "^24.9.0",
-    "@types/node": "^13.1.8",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
+    "@types/jest": "^24.9.0",
+    "@types/node": "^13.1.8",
+    "@types/uuid": "^3.4.6",
     "@types/faker": "^4.1.9",
     "@types/jsonwebtoken": "^8.3.6",
     "@types/lodash": "^4.14.149",
