--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --config jest.config.js"
+    "test": "jest --config jest.config.js",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.2",
+    "ajv": "^6.11.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "typescript": "^3.7.5",
@@ -18,6 +22,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.9.0",
+    "@types/express-jwt": "0.0.42",
     "@types/node": "^13.1.8",
     "@types/uuid": "^3.4.6",
     "@types/faker": "^4.1.9",
