--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --config jest.config.js --watch",
+    "test": "jest --config jest.config.js",
     "build": "tsc"
   },
   "author": "",
